--- a/conf/actions/removefile/sample3.cfg
+++ b/conf/actions/removefile/sample3.cfg
@@ -1,28 +1,28 @@
 [default]
 
-[SAMPLE]
+[sample]
 file_pattern=.*\.(txt|ldrlog|log|btq|fld|fxp|sql)
-target_directory=LOG_DIRECTORY
+target_directory=SAMPLE_ETL_WORK
 days_back=90
 recursive_flg=true
 
-[SAMPLEHU001]
+[samplehu001]
 file_pattern=.*\.(txt|ldrlog|log|btq|fld|fxp|sql)
-target_directory=SAMPLEHU001_LOG_DIRECTORY
+target_directory=SAMPLE_ETL_WORK
 days_back=60
 
-[SAMPLEHL001]
+[samplehl001]
 file_pattern=.*\.(txt|ldrlog|log|btq|fld|fxp|sql)
-target_directory=SAMPLEHL001_LOG_DIRECTORY
+target_directory=SAMPLE_ETL_WORK
 days_back=60
 
-[SAMPLEIX101]
+[sampleix101]
 file_pattern=.*\.(txt|ldrlog|log|btq|fld|fxp|sql)
-target_directory=SAMPLEIX101_LOG_DIRECTORY
+target_directory=SAMPLE_ETL_WORK
 days_back=30
 
-[test]
+[sample_test]
 file_pattern=.*\.(txt|ldrlog|log|btq|fld|fxp|sql)
-target_directory=SAMPLE_LOAD_DIRECTORY
+target_directory=SAMPLE_ETL_WORK
 days_back=7
 recursive_flg=true
