--- a/conf/actions/simpleExtract/sample2.cfg
+++ b/conf/actions/simpleExtract/sample2.cfg
@@ -1,12 +1,12 @@
 [default]
 target_directory=LOAD_SAMPLE_DIRECTORY
-database=dbname_sample
+database=database_key
 extractor=mysql
 target_date_column=update_time
 days_back=3
 delimiter=\t
 
-[tablename_sample]
+[sample_tablename]
 table=sample
 columns=id,value,create_time,update_time
 mode=full
