--- a/conf/actions/simpleLoad/sample1.cfg
+++ b/conf/actions/simpleLoad/sample1.cfg
@@ -1,6 +1,6 @@
 [default]
-source_directory=LOAD_SAMPLE_DIRECTORY
-database=dbname_sample
+source_directory=SAMPLE_ETL_WORK
+database=database_key
 loader=fastload
 
 [sample_section1]
